--- a/live/package.json
+++ b/live/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "fortmatic": "^2.0.5",
     "get-ipfs": "^1.1.1",
     "ipfs-api": "^26.1.2",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.15"
+    "vuetify": "^2.2.15",
+    "web3": "^1.2.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
