--- a/live/package.json
+++ b/live/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@portis/web3": "^2.0.0-beta.54",
+    "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "fortmatic": "^2.0.5",
@@ -16,7 +18,8 @@
     "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vuetify": "^2.2.15",
-    "web3": "^1.2.6"
+    "web3": "^1.2.6",
+    "web3connect": "^1.0.0-beta.32"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
